; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_mount_drain_and_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_mount_drain_and_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsmount = type { i64, i32, i32 }

@NFSSTA_MOUNT_DRAIN = common dso_local global i32 0, align 4
@PZERO = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"nfs_mount_drain\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_mount_drain_and_cleanup(%struct.nfsmount* %0) #0 {
  %2 = alloca %struct.nfsmount*, align 8
  store %struct.nfsmount* %0, %struct.nfsmount** %2, align 8
  %3 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %4 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %3, i32 0, i32 1
  %5 = call i32 @lck_mtx_lock(i32* %4)
  %6 = load i32, i32* @NFSSTA_MOUNT_DRAIN, align 4
  %7 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %8 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  br label %11

11:                                               ; preds = %16, %1
  %12 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %13 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sgt i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %11
  %17 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %18 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %17, i32 0, i32 0
  %19 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %20 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %19, i32 0, i32 1
  %21 = load i64, i64* @PZERO, align 8
  %22 = sub nsw i64 %21, 1
  %23 = call i32 @msleep(i64* %18, i32* %20, i64 %22, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32* null)
  br label %11

24:                                               ; preds = %11
  %25 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %26 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %32 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %31, i32 0, i32 1
  %33 = call i32 @lck_mtx_unlock(i32* %32)
  %34 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %35 = call i32 @nfs_mount_cleanup(%struct.nfsmount* %34)
  ret void
}

declare dso_local i32 @lck_mtx_lock(i32*) #1

declare dso_local i32 @msleep(i64*, i32*, i64, i8*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1

declare dso_local i32 @nfs_mount_cleanup(%struct.nfsmount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
